# guish

./: .gitignore  CMakeLists.txt  README.md  build.nix  default.nix  shell.nix
src/: CMakeLists.txt  guish.c  main.c  parse-statement.c  parse.c  process.c  scanner.c
src/guish/: guish.h  parse-statement.h  parse.h  process.h
tests/: guish_guish.c  guish_parse_statement.c  guish_process.c
